Explain why the author is assumed to be "Mantutia Melchizedek"

--- a/tex/p120.tex
+++ b/tex/p120.tex
@@ -1,6 +1,6 @@
 \upaper{120}{The Bestowal of Michael on Urantia}
 \author{Mantutia Melchizedek}
-\vs p120 0:1 Assigned by Gabriel to supervise the restatement of the life of Michael when on Urantia and in the likeness of mortal flesh, I, the Melchizedek director of the revelatory commission intrusted with this task, am authorized to present this narrative of certain events which immediately preceded the Creator Son’s arrival on Urantia to embark upon the terminal phase of his universe bestowal experience. To live such identical lives as he imposes upon the intelligent beings of his own creation, thus to bestow himself in the likeness of his various orders of created beings, is a part of the price which every Creator Son must pay for the full and supreme sovereignty of his self\hyp{}made universe of things and beings.
+\vs p120 0:1 Assigned by Gabriel to supervise the restatement of the life of Michael when on Urantia and in the likeness of mortal flesh, I, the Melchizedek director of the revelatory commission\fnst{\textbf{the Melchizedek director of the revelatory commission}, The name ``Mantutia Melchizedek'' is printed above on the assumption that this is the same director of the revelatory commission that was also mentioned in \bibref[56:10.23]{p056 10:23} and \bibref[119:8.9]{p119 8:9}. This assumption was first made by Bill Saddler~Jr. when he prepared ``The Titles of the Papers'' of the original Urantia Book published in 1955.} intrusted with this task, am authorized to present this narrative of certain events which immediately preceded the Creator Son’s arrival on Urantia to embark upon the terminal phase of his universe bestowal experience. To live such identical lives as he imposes upon the intelligent beings of his own creation, thus to bestow himself in the likeness of his various orders of created beings, is a part of the price which every Creator Son must pay for the full and supreme sovereignty of his self\hyp{}made universe of things and beings.
 \vs p120 0:2 Before the events I am about to delineate, Michael of Nebadon had bestowed himself six times after the similitude of six differing orders of his diverse creation of intelligent beings. Then he prepared to descend upon Urantia in the likeness of mortal flesh, the lowest order of his intelligent will creatures, and, as such a human of the material realm, to execute the final act in the drama of the acquirement of universe sovereignty in accordance with the mandates of the divine Paradise Rulers of the universe of universes.
 \vs p120 0:3 In the course of each of these preceding bestowals Michael not only acquired the finite experience of one group of his created beings, but he also acquired an essential experience in Paradise co\hyp{}operation which would, in and of itself, further contribute to constituting him the sovereign of his self\hyp{}made universe. At any moment throughout all past local universe time, Michael could have asserted personal sovereignty as a Creator Son and as a Creator Son could have ruled his universe after the manner of his own choosing. In such an event, Immanuel and the associated Paradise Sons would have taken leave of the universe. But Michael did not wish to rule Nebadon merely in his own isolated right, as a Creator Son. He desired to ascend through actual experience in co\hyp{}operative subordination to the Paradise Trinity to that high place in universe status where he would become qualified to rule his universe and administer its affairs with that perfection of insight and wisdom of execution which will sometime be characteristic of the exalted rule of the Supreme Being. He aspired not to perfection of rule as a Creator Son but to supremacy of administration as the embodiment of the universe wisdom and the divine experience of the Supreme Being.
 \vs p120 0:4 Michael, therefore, had a double purpose in the making of these seven bestowals upon the various orders of his universe creatures: First, he was completing the required experience in creature understanding which is demanded of all Creator Sons before they assume complete sovereignty. At any time a Creator Son may rule his universe in his own right, but he can rule as the supreme representative of the Paradise Trinity only after passing through the seven universe\hyp{}creature bestowals. Second, he was aspiring to the privilege of representing the maximum authority of the Paradise Trinity which can be exercised in the direct and personal administration of a local universe. Accordingly, did Michael, during the experience of each of his universe bestowals, successfully and acceptably voluntarily subordinate himself to the variously constituted wills of the diverse associations of the persons of the Paradise Trinity. That is, on the first bestowal he was subject to the combined will of the Father, Son, and Spirit; on the second bestowal to the will of the Father and the Son; on the third bestowal to the will of the Father and the Spirit; on the fourth bestowal to the will of the Son and the Spirit; on the fifth bestowal to the will of the Infinite Spirit; on the sixth bestowal to the will of the Eternal Son; and during the seventh and final bestowal, on Urantia, to the will of the Universal Father.
