Enable ligatures on Android as both Adobe Reader and ezPDF now handle ligatures properly when searching.

--- a/tex/urantia-core.tex
+++ b/tex/urantia-core.tex
@@ -26,7 +26,8 @@
 % allow inter-paragraph space to grow
 \setlength{\parskip}{2pt plus 5pt minus 2pt}
 
-\setmainfont[WordSpace={1.2,2.5,1.0},\tunemarkup{pgnexus7}{Ligatures=NoCommon,}Mapping=tex-text]{\urantiamainfont}
+%\setmainfont[WordSpace={1.2,2.5,1.0},\tunemarkup{pgnexus7}{Ligatures=NoCommon,}Mapping=tex-text]{\urantiamainfont}
+\setmainfont[WordSpace={1.2,2.5,1.0},Mapping=tex-text]{\urantiamainfont}
 \newfontfamily\titlefont[Letters=Uppercase,LetterSpace=1.0,WordSpace=2.0,Mapping=tex-text]{\urantiatitlefont}
 \newfontfamily\parttitlefont[Letters=Uppercase,LetterSpace=1.0,WordSpace=2.0,Mapping=tex-text]{\urantiaparttitlefont}
 \newfontfamily\headerfont[Letters=Uppercase,LetterSpace=2.0,Mapping=tex-text]{\urantiaheaderfont}
