--- a/tex/p035.tex
+++ b/tex/p035.tex
@@ -10,11 +10,11 @@
 \usection{1.\bibnobreakspace The Father Melchizedek}
 \vs p035 1:1 After bringing into existence the beings of personal aid, such as the Bright and Morning Star and other administrative personalities, in accordance with the divine purpose and creative plans of a given universe, there occurs a new form of creative union between the Creator Son and the Creative Spirit, the local universe Daughter of the Infinite Spirit. The personality offspring resulting from this creative partnership is the original Melchizedek --- the Father Melchizedek --- that unique being who subsequently collaborates with the Creator Son and the Creative Spirit to bring into existence the entire group of that name.
 \vs p035 1:2 In the universe of Nebadon the Father Melchizedek acts as the first executive associate of the Bright and Morning Star. Gabriel is occupied more with universe policies, Melchizedek with practical procedures. Gabriel presides over the regularly constituted tribunals and councils of Nebadon, Melchizedek over the special, extraordinary, and emergency commissions and advisory bodies. Gabriel and the Father Melchizedek are never away from Salvington at the same time\fnst{\textbf{Gabriel and the Father Melchizedek are never away from Salvington at the same time}, They were \bibemph{apparently} away at the same time on the Mount of Transfiguration, cf. \bibref[158:1.6,7]{p158 1:6}.}, for in Gabriel’s absence the Father Melchizedek functions as the chief executive of Nebadon.
-\vs p035 1:3 The Melchizedeks of our universe were all created within one millennial period of standard time by the Creator Son and the Creative Spirit in liaison with the Father Melchizedek. Being an order of sonship wherein one of their own number functioned as co\hyp{}ordinate creator, Melchizedeks are in constitution partly of self\hyp{}origin and therefore candidates for the realization of a supernal type of self\hyp{}government. They periodically elect their own administrative chief for a term of seven years of standard time and otherwise function as a self\hyp{}regulating order, though the original Melchizedek does exercise certain inherent coparental prerogatives. From time to time this Father Melchizedek designates certain individuals of his order to function as special Life Carriers to the midsonite worlds, a type of inhabited planet not heretofore revealed on Urantia.
+\vs p035 1:3 The Melchizedeks of our universe were all created within one millennial period of standard time by the Creator Son and the Creative Spirit in liaison with the Father Melchizedek. Being an order of sonship wherein one of their own number functioned as co\hyp{}ordinate creator, Melchizedeks are in constitution partly of self\hyp{}origin and therefore candidates for the realization of a supernal type of self\hyp{}government. They periodically elect their own administrative chief for a term of 7 years of standard time and otherwise function as a self\hyp{}regulating order, though the original Melchizedek does exercise certain inherent coparental prerogatives. From time to time this Father Melchizedek designates certain individuals of his order to function as special Life Carriers to the midsonite worlds, a type of inhabited planet not heretofore revealed on Urantia.
 \vs p035 1:4 The Melchizedeks do not function extensively outside the local universe except when they are called as witnesses in matters pending before the tribunals of the superuniverse, and when designated special ambassadors, as they sometimes are, representing one universe to another in the same superuniverse. The original or first\hyp{}born Melchizedek of each universe is always at liberty to journey to the neighbouring universes or to Paradise on missions having to do with the interests and duties of his order.
 \usection{2.\bibnobreakspace The Melchizedek Sons}
 \vs p035 2:1 The Melchizedeks are the first order of divine Sons to approach sufficiently near the lower creature life to be able to function directly in the ministry of mortal uplift, to serve the evolutionary races without the necessity of incarnation. These Sons are naturally at the mid\hyp{}point of the great personality descent, by origin being just about midway between the highest Divinity and the lowest creature life of will endowment. They thus become the natural intermediaries between the higher and divine levels of living existence and the lower, even the material, forms of life on the evolutionary worlds. The seraphic orders, the angels, delight to work with the Melchizedeks; in fact, all forms of intelligent life find in these Sons understanding friends, sympathetic teachers, and wise counsellors.
-\vs p035 2:2 The Melchizedeks are a self\hyp{}governing order. With this unique group we encounter the first attempt at self\hyp{}determination on the part of local universe beings and observe the highest type of true self\hyp{}government. These Sons organize their own machinery for their group and home\hyp{}planet administration, as well as that for the six associated spheres and their tributary worlds. And it should be recorded that they have never abused their prerogatives; not once throughout all the superuniverse of Orvonton have these Melchizedek Sons ever betrayed their trust. They are the hope of every universe group which aspires to self\hyp{}government; they are the pattern and the teachers of self\hyp{}government to all the spheres of Nebadon. All orders of intelligent beings, superiors from above and subordinates from below, are wholehearted in their praise of the government of the Melchizedeks.
+\vs p035 2:2 The Melchizedeks are a self\hyp{}governing order. With this unique group we encounter the first attempt at self\hyp{}determination on the part of local universe beings and observe the highest type of true self\hyp{}government. These Sons organize their own machinery for their group and home\hyp{}planet administration, as well as that for the 6 associated spheres and their tributary worlds. And it should be recorded that they have never abused their prerogatives; not once throughout all the superuniverse of Orvonton have these Melchizedek Sons ever betrayed their trust. They are the hope of every universe group which aspires to self\hyp{}government; they are the pattern and the teachers of self\hyp{}government to all the spheres of Nebadon. All orders of intelligent beings, superiors from above and subordinates from below, are wholehearted in their praise of the government of the Melchizedeks.
 \vs p035 2:3 \pc The Melchizedek order of sonship occupies the position, and assumes the responsibility, of the eldest son in a large family. Most of their work is regular and somewhat routine, but much of it is voluntary and altogether self\hyp{}imposed. A majority of the special assemblies which, from time to time, convene on Salvington are called on motion of the Melchizedeks. On their own initiative these Sons patrol their native universe. They maintain an autonomous organization devoted to universe intelligence, making periodical reports to the Creator Son independent of all information coming up to universe headquarters through the regular agencies concerned with the routine administration of the realm. They are by nature unprejudiced observers; they have the full confidence of all classes of intelligent beings.
 \vs p035 2:4 The Melchizedeks function as mobile and advisory review courts of the realms; these universe Sons go in small groups to the worlds to serve as advisory commissions, to take depositions, to receive suggestions, and to act as counsellors, thus helping to compose the major difficulties and settle the serious differences which arise from time to time in the affairs of the evolutionary domains.
 \vs p035 2:5 These eldest Sons of a universe are the chief aids of the Bright and Morning Star in carrying out the mandates of the Creator Son. When a Melchizedek goes to a remote world in the name of Gabriel, he may, for the purposes of that particular mission, be deputized in the name of the sender and in that event will appear on the planet of assignment with the full authority of the Bright and Morning Star. Especially is this true on those spheres where a higher Son has not yet appeared in the likeness of the creatures of the realm.
@@ -23,8 +23,8 @@
 \vs p035 2:8 \pc The Melchizedeks are well\hyp{}nigh perfect in wisdom, but they are not infallible in judgment. When detached and alone on planetary missions, they have sometimes erred in minor matters, that is, they have elected to do certain things which their supervisors did not subsequently approve. Such an error of judgment temporarily disqualifies a Melchizedek until he goes to Salvington and, in audience with the Creator Son, receives that instruction which effectually purges him of the disharmony which caused disagreement with his fellows; and then, following the correctional rest, reinstatement to service ensues on the third day. But these minor misadaptations in Melchizedek function have rarely occurred in Nebadon.
 \vs p035 2:9 These Sons are not an increasing order; their number is stationary, although varying in each local universe. The number of Melchizedeks of record on their headquarters planet in Nebadon is upward of 10,000,000.
 \usection{3.\bibnobreakspace The Melchizedek Worlds}
-\vs p035 3:1 The Melchizedeks occupy a world of their own near Salvington, the universe headquarters. This sphere, by name Melchizedek, is the pilot world of the Salvington circuit of 70 primary spheres, each of which is encircled by six tributary spheres devoted to specialized activities. These marvellous spheres --- 70 primaries and 420 tributaries --- are often spoken of as the Melchizedek University. Ascending mortals from all the constellations of Nebadon pass through training on all 490 worlds in the acquirement of residential status on Salvington. But the education of ascenders is only one phase of the manifold activities taking place on the Salvington cluster of architectural spheres.
-\vs p035 3:2 The 490 spheres of the Salvington circuit are divided into ten groups, each containing seven primary and 42 tributary spheres. Each of these groups is under the general supervision of some one of the major orders of universe life. The first group, embracing the pilot world and the next six primary spheres in the encircling planetary procession, is under the supervision of the Melchizedeks. These Melchizedek worlds are:
+\vs p035 3:1 The Melchizedeks occupy a world of their own near Salvington, the universe headquarters. This sphere, by name Melchizedek, is the pilot world of the Salvington circuit of 70 primary spheres, each of which is encircled by 6 tributary spheres devoted to specialized activities. These marvellous spheres --- 70 primaries and 420 tributaries --- are often spoken of as the Melchizedek University. Ascending mortals from all the constellations of Nebadon pass through training on all 490 worlds in the acquirement of residential status on Salvington. But the education of ascenders is only one phase of the manifold activities taking place on the Salvington cluster of architectural spheres.
+\vs p035 3:2 The 490 spheres of the Salvington circuit are divided into 10 groups, each containing 7 primary and 42 tributary spheres. Each of these groups is under the general supervision of some one of the major orders of universe life. The first group, embracing the pilot world and the next 6 primary spheres in the encircling planetary procession, is under the supervision of the Melchizedeks. These Melchizedek worlds are:
 \begin{figure}[H]
 \centering
 \includegraphics[angle=90,scale=\tunemarkup{pgkoboaurahd}{1.89}\tunemarkup{pghanlin}{1.66}\tunemarkup{pgnexus7}{1.88}\tunemarkup{pgkindledx}{1.57}]{../urantia-pictures/SALVINGTON_700.jpg}
@@ -37,10 +37,10 @@
 \vs p035 3:7 \ublistelem{5.}\bibnobreakspace The world of mid\hyp{}spirit life.
 \vs p035 3:8 \ublistelem{6.}\bibnobreakspace The sphere of advancing spirit life.
 \vs p035 3:9 \ublistelem{7.}\bibnobreakspace The domain of co\hyp{}ordinate and supreme self\hyp{}realization.
-\vs p035 3:10 \pc The six tributary worlds of each of these Melchizedek spheres are devoted to activities germane to the work of the associated primary sphere.
+\vs p035 3:10 \pc The 6 tributary worlds of each of these Melchizedek spheres are devoted to activities germane to the work of the associated primary sphere.
 \vs p035 3:11 \pc The pilot world, the sphere \bibemph{Melchizedek,} is the common meeting ground for all beings who are engaged in educating and spiritualizing the ascending mortals of time and space. To an ascender this world is probably the most interesting place in all Nebadon. All evolutionary mortals who graduate from their constellation training are destined to land on Melchizedek, where they are initiated into the regime of the disciplines and spirit progression of the Salvington educational system. And never will you forget your reactions to the first day of life on this unique world, not even after you have reached your Paradise destination.
-\vs p035 3:12 Ascending mortals maintain residence on the Melchizedek world while pursuing their training on the six encircling planets of specialized education. And this same method is adhered to throughout their sojourn on the 70 cultural worlds, the primary spheres of the Salvington circuit.
-\vs p035 3:13 \pc Many diverse activities occupy the time of the numerous beings who reside on the six tributary worlds of the Melchizedek sphere, but as concerns the ascending mortals, these satellites are devoted to the following special phases of study:
+\vs p035 3:12 Ascending mortals maintain residence on the Melchizedek world while pursuing their training on the 6 encircling planets of specialized education. And this same method is adhered to throughout their sojourn on the 70 cultural worlds, the primary spheres of the Salvington circuit.
+\vs p035 3:13 \pc Many diverse activities occupy the time of the numerous beings who reside on the 6 tributary worlds of the Melchizedek sphere, but as concerns the ascending mortals, these satellites are devoted to the following special phases of study:
 \vs p035 3:14 \ublistelem{1.}\bibnobreakspace Sphere number one is occupied with the review of the initial planetary life of the ascending mortals. This work is carried on in classes composed of those who hail from a given world of mortal origin. Those from Urantia pursue such an experiential review together.
 \vs p035 3:15 \ublistelem{2.}\bibnobreakspace The special work of sphere number two consists in a similar review of the experiences passed through on the mansion worlds encircling the premier satellite of the local system headquarters.
 \vs p035 3:16 \ublistelem{3.}\bibnobreakspace The reviews of this sphere pertain to the sojourn on the capital of the local system and embrace the activities of the remainder of the architectural worlds of the system headquarters cluster.
@@ -71,8 +71,8 @@
 \vs p035 6:4 The entire mechanism of spirit intelligence and communication channels is at the disposal of the constellation Most Highs. They are in perfect touch with their superiors on Salvington and with their direct subordinates, the sovereigns of the local systems. They frequently convene in council with these System Sovereigns to deliberate upon the state of the constellation.
 \vs p035 6:5 The Most Highs surround themselves with a corps of counsellors, which varies in number and personnel from time to time in accordance with the presence of the various groups at constellation headquarters and also as the local requirements vary. During times of stress they may ask for, and will quickly receive, additional Sons of the Vorondadek order to assist with the administrative work. Norlatiadek, your own constellation, is at present administered by 12 Vorondadek Sons.
 \usection{7.\bibnobreakspace The Vorondadek Worlds}
-\vs p035 7:1 The second group of seven worlds in the circuit of 70 primary spheres surrounding Salvington comprise the Vorondadek planets. Each of these spheres, with its six encircling satellites, is devoted to a special phase of Vorondadek activities. On these 49 realms the ascending mortals secure the acme of their education respecting universe legislation.
-\vs p035 7:2 The ascending mortals have observed the legislative assemblies as they functioned on the headquarters worlds of the constellations, but here on these Vorondadek worlds they participate in the enactment of the actual general legislation of the local universe under the tutelage of the senior Vorondadeks. Such enactments are designed to co\hyp{}ordinate the varied pronouncements of the autonomous legislative assemblies of the 100 constellations. The instruction to be had in the Vorondadek schools is unexcelled even on Uversa. This training is progressive, extending from the first sphere, with supplemental work on its six satellites, on up through the remaining six primary spheres and their associated satellite groups.
+\vs p035 7:1 The second group of 7 worlds in the circuit of 70 primary spheres surrounding Salvington comprise the Vorondadek planets. Each of these spheres, with its 6 encircling satellites, is devoted to a special phase of Vorondadek activities. On these 49 realms the ascending mortals secure the acme of their education respecting universe legislation.
+\vs p035 7:2 The ascending mortals have observed the legislative assemblies as they functioned on the headquarters worlds of the constellations, but here on these Vorondadek worlds they participate in the enactment of the actual general legislation of the local universe under the tutelage of the senior Vorondadeks. Such enactments are designed to co\hyp{}ordinate the varied pronouncements of the autonomous legislative assemblies of the 100 constellations. The instruction to be had in the Vorondadek schools is unexcelled even on Uversa. This training is progressive, extending from the first sphere, with supplemental work on its 6 satellites, on up through the remaining 6 primary spheres and their associated satellite groups.
 \vs p035 7:3 The ascending pilgrims will be introduced to numerous new activities on these worlds of study and practical work. We are not forbidden to undertake the revelation of these new and undreamed\hyp{}of pursuits, but we despair of being able to portray these undertakings to the material mind of mortal beings. We are without words to convey the meanings of these supernal activities, and there are no analogous human engagements which might be utilized as illustrations of these new occupations of the ascending mortals as they pursue their studies on these 49 worlds. And many other activities, not a part of the ascendant regime, are centred on these Vorondadek worlds of the Salvington circuit.
 \usection{8.\bibnobreakspace The Lanonandek Sons}
 \vs p035 8:1 After the creation of the Vorondadeks, the Creator Son and the Universe Mother Spirit unite for the purpose of bringing into existence the third order of universe sonship, the Lanonandeks. Although occupied with varied tasks connected with the system administrations, they are best known as System Sovereigns, the rulers of the local systems, and as Planetary Princes, the administrative heads of the inhabited worlds.
@@ -102,7 +102,7 @@
 \vs p035 9:9 \pc In the event of rebellion on a system headquarters, a new sovereign is usually installed within a comparatively short time, but not so on the individual planets. They are the component units of the material creation, and creature free will is a factor in the final adjudication of all such problems. Successor Planetary Princes are designated for isolated worlds, planets whose princes of authority may have gone astray, but they do not assume active rulership of such worlds until the results of insurrection are partially overcome and removed by the remedial measures adopted by the Melchizedeks and other ministering personalities. Rebellion by a Planetary Prince instantly isolates his planet; the local spiritual circuits are immediately severed. Only a bestowal Son can re\hyp{}establish interplanetary lines of communication on such a spiritually isolated world.
 \vs p035 9:10 There exists a plan for saving these wayward and unwise Sons, and many have availed themselves of this merciful provision; but never again may they function in those positions wherein they defaulted. After rehabilitation they are assigned to custodial duties and to departments of physical administration.
 \usection{10.\bibnobreakspace The Lanonandek Worlds}
-\vs p035 10:1 The third group of seven worlds in the Salvington circuit of 70 planets, with their respective 42 satellites, constitute the Lanonandek cluster of administrative spheres. On these realms the experienced Lanonandeks belonging to the ex\hyp{}System Sovereign corps officiate as administrative teachers of the ascending pilgrims and the seraphic hosts. The evolutionary mortals observe the system administrators at work on the system capitals, but here they participate in the actual co\hyp{}ordination of the administrative pronouncements of the 10,000 local systems.
+\vs p035 10:1 The third group of 7 worlds in the Salvington circuit of 70 planets, with their respective 42 satellites, constitute the Lanonandek cluster of administrative spheres. On these realms the experienced Lanonandeks belonging to the ex\hyp{}System Sovereign corps officiate as administrative teachers of the ascending pilgrims and the seraphic hosts. The evolutionary mortals observe the system administrators at work on the system capitals, but here they participate in the actual co\hyp{}ordination of the administrative pronouncements of the 10,000 local systems.
 \vs p035 10:2 These administrative schools of the local universe are supervised by a corps of Lanonandek Sons who have had long experience as System Sovereigns and as constellation counsellors. These executive colleges are excelled only by the administrative schools of Ensa.
 \vs p035 10:3 While serving as training spheres for ascending mortals, the Lanonandek worlds are the centres for extensive undertakings having to do with the normal and routine administrative operations of the universe. All the way in to Paradise the ascending pilgrims pursue their studies in the practical schools of applied knowledge --- actual training in really doing the things they are being taught. The universe educational system sponsored by the Melchizedeks is practical, progressive, meaningful, and experiential. It embraces training in things material, intellectual, morontial, and spiritual.
 \vs p035 10:4 \pc It is in connection with these administrative spheres of the Lanonandeks that most of the salvaged Sons of that order serve as custodians and directors of planetary affairs. And these defaulting Planetary Princes and their associates in rebellion who choose to accept the proffered rehabilitation will continue to serve in these routine capacities, at least until the universe of Nebadon is settled in light and life.
