--- a/tex/p038.tex
+++ b/tex/p038.tex
@@ -4,7 +4,7 @@
 \vs p038 0:2 \pc As the supernaphim in the central universe and the seconaphim in a superuniverse, so the seraphim, with the associated cherubim and sanobim, constitute the angelic corps of a local universe.
 \vs p038 0:3 The seraphim are all fairly uniform in design. From universe to universe, throughout all seven of the superuniverses, they show a minimum of variation; they are the most nearly standard of all spirit types of personal beings. Their various orders constitute the corps of the skilled and common ministers of the local creations.
 \usection{1.\bibnobreakspace Origin of Seraphim}
-\vs p038 1:1 Seraphim are created by the Universe Mother Spirit and have been projected in unit formation --- 41,472 at a time --- ever since the creation of the “pattern angels” and certain angelic archetypes in the early times of Nebadon. The Creator Son and the universe representation of the Infinite Spirit collaborate in the creation of a large number of Sons and other universe personalities. Following the completion of this united effort, the Son engages in the creation of the Material Sons, the first of the sex creatures, while the Universe Mother Spirit concurrently engages in her initial solitary effort at spirit reproduction. Thus begins the creation of the seraphic hosts of a local universe.
+\vs p038 1:1 Seraphim are created by the Universe Mother Spirit and have been projected in unit formation --- 41,472\fnst{\textbf{41,472} $=$ 1 unit $=$ 12 battalions, cf. \bibref[38:6.1]{p038 6:1}.} at a time --- ever since the creation of the “pattern angels” and certain angelic archetypes in the early times of Nebadon. The Creator Son and the universe representation of the Infinite Spirit collaborate in the creation of a large number of Sons and other universe personalities. Following the completion of this united effort, the Son engages in the creation of the Material Sons, the first of the sex creatures, while the Universe Mother Spirit concurrently engages in her initial solitary effort at spirit reproduction. Thus begins the creation of the seraphic hosts of a local universe.
 \vs p038 1:2 These angelic orders are projected at the time of planning for the evolution of mortal will creatures. The creation of seraphim dates from the attainment of relative personality by the Universe Mother Spirit, not as the later co\hyp{}ordinate of the Master Son, but as the early creative helper of the Creator Son. Previous to this event the seraphim on duty in Nebadon were temporarily loaned by a neighbouring universe.
 \vs p038 1:3 Seraphim are still being periodically created; the universe of Nebadon is still in the making. The Universe Mother Spirit never ceases creative activity in a growing and perfecting universe.
 \usection{2.\bibnobreakspace Angelic Natures}
