Add a study note to 37:2.8.

--- a/tex/p037.tex
+++ b/tex/p037.tex
@@ -21,7 +21,7 @@
 \vs p037 2:5 Both types of Brilliant Evening Stars are easily visible to morontia personalities and certain types of supermortal material beings. The created beings of this interesting and versatile order possess a spirit force which can be manifested independently of their personal presence.
 \vs p037 2:6 \pc The head of these superangels is Gavalia, the first\hyp{}born of this order in Nebadon. Since the return of Christ Michael from his triumphant bestowal on Urantia, Gavalia has been assigned to the ascendant mortal ministry, and for the last 1900 Urantia years his associate, Galantia, has maintained headquarters on Jerusem, where he spends about half of his time. Galantia is the first of the ascendant superangels to attain this high estate.
 \vs p037 2:7 No grouping or company organization of the Brilliant Evening Stars exists other than their customary association in pairs on many assignments. They are not extensively assigned on missions pertaining to the ascendant career of mortals, but when thus commissioned, they never function alone. They always work in pairs --- one a created being, the other an ascendant Evening Star.
-\vs p037 2:8 One of the high duties of the Evening Stars is to accompany the Avonal bestowal Sons on their planetary missions, even as Gabriel accompanied Michael on his Urantia bestowal. The two attending superangels are the ranking personalities of such missions, serving as cocommanders of the archangels and all others assigned to these undertakings. It is the senior of these superangel commanders who, at the significant time and age, bids the Avonal bestowal Son, “Be about your brother’s business.”
+\vs p037 2:8 One of the high duties of the Evening Stars is to accompany the Avonal bestowal Sons on their planetary missions, even as Gabriel accompanied Michael on his Urantia bestowal. The two attending superangels are the ranking personalities of such missions, serving as cocommanders of the archangels and all others assigned to these undertakings. It is the senior of these superangel commanders who, at the significant time and age, bids the Avonal bestowal Son, “Be about your brother’s business.”\fnst{\textbf{“Be about your brother’s business.”}, Compare with a similar message Jesus received at the age of 12 during the visit to Jerusalem (see \bibref[124:6.15]{p124 6:15}): “The hour has come. It is time that you began to be about your Father’s business.”}
 \vs p037 2:9 Similar pairs of these superangels are assigned to the planetary corps of Trinity Teacher Sons that functions to establish the postbestowal or dawning spiritual age of an inhabited world. On such assignments the Evening Stars serve as liaisons between the mortals of the realm and the invisible corps of Teacher Sons.
 \vs p037 2:10 \pc \bibemph{The Worlds of the Evening Stars.} The sixth group of seven Salvington worlds and their 42 tributary satellites are assigned to the administration of the Brilliant Evening Stars. The seven primary worlds are presided over by the created orders of these superangels, while the tributary satellites are administered by ascendant Evening Stars.
 \vs p037 2:11 The satellites of the first three worlds are devoted to the schools of the Teacher Sons and the Evening Stars dedicated to the spirit personalities of the local universe. The next three groups are occupied by similar joint schools devoted to the training of ascending mortals. The seventh\hyp{}world satellites are reserved for the triune deliberations of the Teacher Sons, the Evening Stars, and the finaliters. During recent times these superangels have been closely identified with the local universe work of the Corps of the Finality, and they have long been associated with the Teacher Sons. There exists a liaison of tremendous power and import between the Evening Stars and the Gravity Messengers attached to the finaliter working groups. The seventh primary world itself is reserved for those unrevealed matters which pertain to the future relationship that will obtain between the Teacher Sons, the finaliters, and the Evening Stars consequent upon the completed emergence of the superuniverse manifestation of the personality of God the Supreme.
