Display the number of illustrations on the title page

--- a/tex/title.tex
+++ b/tex/title.tex
@@ -69,7 +69,7 @@ THE FIFTH EPOCHAL REVELATION\\
 \itshape
 The Standard Reference Text in British English,\\
 with Metric Measures, Textual Variants,\\
-Study Notes \&\ Illustrations\\
+Study Notes \&\ \totalfigures\ Illustrations\\
 \tunemarkup{pgnexus7}{\textcolor{ubdarkred}{With Words of Jesus in Red Colour}\\}
 \tunemarkup{pgkindledx}{\fontsize{14}{20}\selectfont}
 \tunemarkup{pghanlin}{\fontsize{9}{18}\selectfont}
