--- a/ubook.sty
+++ b/ubook.sty
@@ -28,6 +28,7 @@
 
 \RequirePackage[perpage]{footmisc}
 \RequirePackage{fancyhdr,color,etex,fixltx2e,multicol,amssymb,xltxtra,polyglossia,hyphenat,ulem,fancybox,xcolor,pagecolor,afterpage,float}
+\RequirePackage[figure]{totalcount}
 
 \renewcommand{\headrulewidth}{0mm}
 \setlength{\parskip}{0mm}
