--- a/urantia-study-edition.tex
+++ b/urantia-study-edition.tex
@@ -12,7 +12,7 @@
 \tunemarkup{pgnexus7}{\fancyhead[C]{\bibheadfont THE TITLES OF THE PAPERS}\bibtableofcontents{}}
 \tunemarkup{pgkoboaurahd}{\fancyhead[C]{\bibheadfont THE TITLES OF THE PAPERS}\bibtableofcontents{}}
 \tunemarkup{pgkindledx}{\include{tex/paper-titles}}
-\listoffigures\newpage
+\iftotalfigures\listoffigures\fi\newpage
 \include{tex/intro}
 \include{tex/p000}
 \include{tex/p001}
