Remove redundant code.

--- a/tex/title.tex
+++ b/tex/title.tex
@@ -1,13 +1,4 @@
-\newcommand{\nocopyright}{%
-  {\fontsize{9}{9}\selectfont\textcopyright%
-   \kern-2.1ex
-  {\fontsize{18}{18}\selectfont\raisebox{-0.15ex}{\textmd{\texttimes}}}%
-}%
-}
-
-\makeatletter
-\bib@raise@anchor{\bibpdfbookmark[0]{Cover}{Cov}}%
-\makeatother
+\makeatletter\bib@raise@anchor{\bibpdfbookmark[0]{Cover Image}{Cov}}\makeatother
 
 \newpagecolor{ubpagecolor}\afterpage{\restorepagecolor}
 \tunemarkup{pghanlin}{\begin{center}\includegraphics[scale=1.64]{images/British-Study-Edition-Cover-tiny.jpg}\end{center}}
