--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -11,7 +11,7 @@
 \tunemarkuptag{pgkoboaurahd}
 %\tunemarkuptag{pgkindledx}
 
-\RequirePackage[\tunemarkup{pgkindledx}{doublecol,}parvs,lettrine]{ubook}
+\RequirePackage[\tunemarkup{pgkindledx}{doublecol,}parvs]{ubook}
 
 % various font families
 % (for now support just Adobe Garamond Premier Pro Opticals)
@@ -39,8 +39,6 @@
 
 \setlength{\columnsep}{3.5mm}
 \setlength\parindent{8\p@}
-\renewcommand{\bibcontname}{The Titles of the Papers}
-\renewcommand{\bibfnvsnumspace}{.\nobreakspace}
 \let\textcolour\textcolor
 
 \newcommand{\hsetoff}{\hspace*{1em}}
