Estimate the mass of "a drop of ordinary water" in two ways and show the obvious discrepancy

--- a/tex/p041.tex
+++ b/tex/p041.tex
@@ -21,7 +21,7 @@
 \vs p041 2:8 The power\hyp{}energy supervision of the evolutionary inhabited worlds is the responsibility of the Master Physical Controllers, but these beings are not responsible for all energy misbehaviour on Urantia. There are a number of reasons for such disturbances, some of which are beyond the domain and control of the physical custodians. Urantia is in the lines of tremendous energies, a small planet in the circuit of enormous masses, and the local controllers sometimes employ enormous numbers of their order in an effort to equalize these lines of energy. They do fairly well with regard to the physical circuits of Satania but have trouble insulating against the powerful Norlatiadek currents.
 \usection{3.\bibnobreakspace Our Starry Associates}
 \vs p041 3:1 There are upward of 2,000 brilliant suns pouring forth light and energy in Satania, and your own sun is an average blazing orb. Of the 30 suns nearest yours, only 3 are brighter. The Universe Power Directors initiate the specialized currents of energy which play between the individual stars and their respective systems. These solar furnaces, together with the dark giants of space, serve the power centres and physical controllers as way stations for the effective concentrating and directionizing of the energy circuits of the material creations.
-\vs p041 3:2 The suns of Nebadon are not unlike those of other universes. The material composition of all suns, dark islands, planets, and satellites, even meteors, is quite identical. These suns have an average diameter of about $1.6\times 10^6$\,km, that of your own solar orb being slightly less\fnst{\textbf{slightly less}, Our own ``solar orb'' has an average diameter of $1.392684 \times 10^6$\,km}. The largest star in the universe, the stellar cloud Antares, is 450 times the diameter of your sun\fnst{\textbf{Antares, is 450 times the diameter of your sun}, According to the present astronomical data for Antares, its diameter (measured by parallax and observed angular diameter) is 800 times that of our sun.} and is 60,000,000 times its volume\fnst{\textbf{60,000,000 times its volume}, There is an apparent contradiction here, as long as the shape of Antares is assumed to be spherical and its volume calculated according to the formula of Euclidean geometry: ${V_{Antares}/V_{\odot}} = {R^3_{Antares}/R^3_{\odot}} = 450^3 = 91,125,000 \neq 60,000,000$. Being a Class M supergiant with the mass of $15.5 M_{\odot}$ it has a density too low to account for the contribution from the space curvature according to the General Relativity, thus implying a non-spherical (ellipsoid) shape.}. But there is abundant space to accommodate all of these enormous suns. They have just as much comparative elbow room in space as one dozen oranges would have if they were circulating about throughout the interior of Urantia, and were the planet a hollow globe.
+\vs p041 3:2 The suns of Nebadon are not unlike those of other universes. The material composition of all suns, dark islands, planets, and satellites, even meteors, is quite identical. These suns have an average diameter of about $1.6\times 10^6$\,km, that of your own solar orb being slightly less\fnst{\textbf{slightly less}, Our own ``solar orb'' has an average diameter of $1.392684 \times 10^6$\,km}. The largest star in the universe, the stellar cloud Antares, is 450 times the diameter of your sun\fnst{\textbf{Antares, is 450 times the diameter of your sun}, According to the present astronomical data for Antares, its diameter (measured by parallax and observed angular diameter) is 800 times that of our sun.} and is 60,000,000 times its volume\fnst{\textbf{60,000,000 times its volume}, There is an apparent contradiction here, as long as the shape of Antares is assumed to be spherical and its volume calculated according to the formula of Euclidean geometry: ${V_{Antares}/V_{\odot}} = {R^3_{Antares}/R^3_{\odot}} = 450^3 = 91,125,000 \neq 60,000,000$. Antares, being a Class M supergiant with the mass of $15.5 M_{\odot}$, has a density far too low to account for the contribution from the space curvature according to the General Relativity, thus implying a non-spherical (ellipsoid) shape.}. But there is abundant space to accommodate all of these enormous suns. They have just as much comparative elbow room in space as one dozen oranges would have if they were circulating about throughout the interior of Urantia, and were the planet a hollow globe.
 \vs p041 3:3 \pc When suns that are too large are thrown off a nebular mother wheel, they soon break up or form double stars. All suns are originally truly gaseous, though they may later transiently exist in a semiliquid state. When your sun attained this quasi\hyp{}liquid state of supergas pressure, it was not sufficiently large to split equatorially, this being one type of double star formation.
 \vs p041 3:4 When less than 0.1 the size of your sun, these fiery spheres rapidly contract, condense, and cool. When upwards of 30 times its size --- rather 30 times the gross content of actual material --- suns readily split into two separate bodies, either becoming the centres of new systems or else remaining in each other’s gravity grasp and revolving about a common centre as one type of double star.
 \vs p041 3:5 \pc The most recent of the major cosmic eruptions in Orvonton was the extraordinary double star explosion, the light of which reached Urantia in A.D.\,1572. This conflagration was so intense that the explosion was clearly visible in broad daylight.
@@ -68,7 +68,7 @@
 \vs p041 7:10 \ublistelem{7.}\bibnobreakspace Recaptive light and other matter which are drawn back into the sun after having left it, together with other energies having extrasolar origin.
 \vs p041 7:11 \pc There exists a regulating blanket of hot gases (sometimes millions of degrees in temperature) which envelops the suns, and which acts to stabilize heat loss and otherwise prevent hazardous fluctuations of heat dissipation. During the active life of a sun the internal temperature of 19,500,000°\,C remains about the same quite regardless of the progressive fall of the external temperature.
 \vs p041 7:12 \pc You might try to visualize 19,500,000°\,C of heat, in association with certain gravity pressures, as the electronic boiling point. Under such pressure and at such temperature all atoms are degraded and broken up into their electronic and other ancestral components; even the electrons and other associations of ultimatons may be broken up, but the suns are not able to degrade the ultimatons.
-\vs p041 7:13 These solar temperatures operate to enormously speed up the ultimatons and the electrons, at least such of the latter as continue to maintain their existence under these conditions. You will realize what high temperature means by way of the acceleration of ultimatonic and electronic activities when you pause to consider that one drop of ordinary water contains over one billion trillions of atoms. This is the energy of more than 100 horsepower exerted continuously for two years. The total heat now given out by the solar system sun each second is sufficient to boil all the water in all the oceans on Urantia in just one second of time.
+\vs p041 7:13 These solar temperatures operate to enormously speed up the ultimatons and the electrons, at least such of the latter as continue to maintain their existence under these conditions. You will realize what high temperature means by way of the acceleration of ultimatonic and electronic activities when you pause to consider that one drop of ordinary water contains over one billion trillions of atoms\fnst{\textbf{one billion trillions of atoms}, the mass of such a drop would be: $m = {1\over 3}(2 m_H + m_O)\times 10^{21} = 0.01\,g$.}. This is the energy of more than 100 horsepower exerted continuously for two years\fnst{\textbf{100 horsepower \ldots\ two years}, assuming the value of 1\,horsepower = 745.7\,watts, we obtain for the energy $E = 100\times 745.7\times 2\times 365\times 86,400 = 4.7\times 10^{12}\,J$. Using Einstein's formula $E = mc^2$, we can calculate the mass of the drop: $m = E/c^2 = 0.05\,g$. This is five times greater than the estimate obtained in the previous note, based on the number of atoms in the drop. Therefore, either Einstein's formula is incorrect (but then how to reconcile this with the statement made in \bibref[42:4.11]{p042 4:11}?) or the masses of hydrogen and oxygen atoms are different from the present values or, perhaps, the revelators are not overly concerned with being absolutely accurate in such minor technical details.}. The total heat now given out by the solar system sun each second is sufficient to boil all the water in all the oceans on Urantia in just one second of time.
 \vs p041 7:14 \pc Only those suns which function in the direct channels of the main streams of universe energy can shine on forever. Such solar furnaces blaze on indefinitely, being able to replenish their material losses by the intake of space\hyp{}force and analogous circulating energy. But stars far removed from these chief channels of recharging are destined to undergo energy depletion --- gradually cool off and eventually burn out.
 \vs p041 7:15 Such dead or dying suns can be rejuvenated by collisional impact or can be recharged by certain nonluminous energy islands of space or through gravity\hyp{}robbery of near\hyp{}by smaller suns or systems. The majority of dead suns will experience revivification by these or other evolutionary techniques. Those which are not thus eventually recharged are destined to undergo disruption by mass explosion when the gravity condensation attains the critical level of ultimatonic condensation of energy pressure. Such disappearing suns thus become energy of the rarest form, admirably adapted to energize other more favourably situated suns.
 \usection{8.\bibnobreakspace Solar\hyp{}Energy Reactions}
